SOAP versioning example modernized, refactoring